--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <main class="container">
   <div class="row">
-    <article class="col-md-7">
+    <article class="col-xs-12 col-md-12 col-lg-6">
       <app-cart></app-cart>
     </article>
-    <aside class="col-md-5">
+    <aside class="col-xs-12 col-md-12 col-lg-4 col-lg-offset-1">
       <app-checkout></app-checkout>
     </aside>
   </div>
