--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
 html, app-root, .container, .list-group, .list-group-item {
     background-color: lightgray !important;
 }
+
 .img-fluid{
-    max-width: 100%;
-    height: auto;
     object-fit: contain;
 }
 
@@ -17,5 +17,5 @@ html, app-root, .container, .list-group, .list-group-item {
     box-sizing: border-box !important;
     margin: 0;
     padding: 0;
-    font-family: 'montserrat';
+    font-family: 'montserrat' !important;
 }
