--- a/src/app/checkout/checkout.component.css
+++ b/src/app/checkout/checkout.component.css
@@ -9,13 +9,11 @@ div.row.checkout-header{
     background-color: #e3f1ee;
 }
 
-
-
 div.header-total{
     text-align: right;
     font-weight: 900;
     font-size: 34px;
-    padding-top: 20px;
+    padding-top: 10px;
 }
 
 div.row.checkout-form{
@@ -40,15 +38,7 @@ div.row.cvv p{
     margin-top: 8px;
 }
 
-div.row.cvv button.example-btn{
-    background: none!important;
-    border: none;
-    padding: 0!important;
-    text-decoration: underline;
-    cursor: pointer;
-}
-
-div.formFooter{
+div.row.formFooter{
     text-align: center;
     font-weight: bold;
     margin: 30px 0 20px 0;
@@ -66,6 +56,10 @@ button.formSub{
     background-color: #e8684b;
     color: white;
     border: 0;
+}
+
+button.formSub[disabled]{
+    opacity: 0.7;
 }
 
 input, select{
@@ -91,7 +85,8 @@ input, select{
     font-size: 20px;
 }
 
-input.ng-touched.ng-invalid, select.ng-touched.ng-invalid{
+input.ng-touched.ng-invalid, 
+select.ng-touched.ng-invalid{
     border: solid 1px red;
 }
 
@@ -105,19 +100,66 @@ div.alert{
     padding: 0;
 }
 
-div.row div.form-group{
+div.row 
+div.form-group{
     margin-left: 0;
     margin-right: 0;
 }
 
-.form-control :focus{
-    border-color: #82d4e7 !important;
+.form-control:focus{
+    border-color: #82d4e7;
 }
 
-div.row.oderSuccess{
-    height: 400px;
+div.row.order-success{
+    display: block;
+}
+
+div.row.order-success 
+div.success-header{
+    background-color: #e3f1ee;
+    text-align: center;
+    vertical-align: middle;
+    font-weight: 900;
+}
+
+div.row.order-success 
+div.success-body{
+    display: block;
     background-color: white;
 }
+
+div.row.order-success 
+div.success-body > div.success-logo{
+    border-radius: 50%;
+    height: 150px;
+    width: 150px;
+    text-align: center;
+    background-color: #5cb85c;
+    margin: 50px auto;
+    display: flex;
+    align-content: center;
+}
+
+div.row.order-success 
+div.success-body > div.success-logo > span{
+    margin: auto auto;
+    color: white;
+    font-size: 50px;
+}
+
+div.row.order-success
+div.success-body > div.order-data{
+    text-align: center;
+    font-size: 18px;
+}
+
+div.row.order-success
+div.success-body > button{
+    width: 100%;
+    margin: 30px 0;
+
+}
+
 
 @media only screen and (max-width: 768px){
     div.row.checkout-form > div.col-xs-12{
@@ -126,9 +168,6 @@ div.row.oderSuccess{
 }
 
 @media only screen and (min-width: 769px) and (max-width: 1024px){
-    div.checkout-header{
-
-    }
 
     div.row.checkout-form label,
     div.row.checkout-form p{
