--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,4 +1,4 @@
-<div class="row checkout">
+<div *ngIf="!isPaid" class="row checkout">
     <div class="row checkout-header">
         <div class="col-xs-12">
             <div class="col-xs-6 header-details">
@@ -10,17 +10,17 @@
             </div>
         </div>
     </div>
-    <div *ngIf="!isPaid" class="row checkout-form">
+    <div class="row checkout-form">
         <div class="col-xs-12">
             <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
                 <div class="row creditNumber">
                     <div class="col-xs-12 form-group">
                         <label for="creditNumber">Credit card number</label>
                         <input type="text" id="creditNumber" class="form-control" formControlName="creditCardNumber">
-                        <div *ngIf="!checkoutForm.get('creditCardNumber').valid && checkoutForm.get('creditCardNumber').touched"
-                            class="alert alert-danger">
-                            Please enter a valid credit card number!
-                        </div>
+                    </div>
+                    <div *ngIf="!checkoutForm.get('creditCardNumber').valid && checkoutForm.get('creditCardNumber').touched"
+                        class="alert alert-danger">
+                        Please enter a valid credit card number!
                     </div>
                 </div>
                 <div class="row expireDate">
@@ -41,6 +41,9 @@
                                 <option *ngFor="let year of years" [value]='year'>{{year}}</option>
                             </select>
                         </div>
+                        <div *ngIf="checkoutForm.errors?.expirationDate" class="alert alert-danger">
+                            Please enter a valid expiration date!
+                        </div>
                     </div>
                 </div>
                 <div class="row cvv">
@@ -52,15 +55,20 @@
                             <input type="password" name="cvv" id="cvv" class="form-control" formControlName="cvv">
                         </div>
                         <div class="col-xs-7 col-lg-9">
-                            <p>3 or 4 digits - <button class="example-btn" type="button">view example</button>
+                            <p>3 or 4 digits - <a
+                                    title="Usually found on the signature strip or the upper right corner of the card number.">view
+                                    example</a>
                             </p>
                         </div>
+                        <div *ngIf="!checkoutForm.get('cvv').valid && checkoutForm.get('cvv').touched"
+                            class="alert alert-danger">Please enter a valid CVV or CVC number!</div>
                     </div>
                 </div>
                 <hr>
                 <div class="row  formFooter">
                     <div class="col-xs-12">
                         <button class="formSub" type="submit" title="Pay and finalize your order">Pay</button>
+                        <!-- [disabled]="!checkoutForm.valid" -->
                         <br>
                         <br>
                         <p><a title="Cancel order and return to the cart">Cancel order</a></p>
@@ -69,9 +77,24 @@
             </form>
         </div>
     </div>
-    <div *ngIf="isPaid" class="row orderSuccess">
-        <div class="col-xs-12">
-            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+</div>
+
+<div *ngIf="isPaid" class="row order-success">
+    <div class="row">
+        <div class="col-xs-12 success-header">
+            <h2>Payment successful!</h2>
+        </div>
+        <div class="col-xs-12 success-body">
+            <div class="success-logo">
+                <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+            </div>
+            <div class="order-data">
+                <p>Your order number is: {{ orderNumber }}</p>
+                <br>
+                <p>You will receive a confirmation email shortly!</p>
+                <!-- additional information may be placed here to inform the customer -->
+            </div>
+            <button type="button" class="btn btn-success" title="">OK</button>
         </div>
     </div>
 </div>
