--- a/src/styles.css
+++ b/src/styles.css
@@ -19,3 +19,16 @@ html, app-root, .container, .list-group, .list-group-item {
     padding: 0;
     font-family: 'montserrat' !important;
 }
+
+@font-face{
+    font-family: 'Glyphicons Halflings';
+    src: url('node_modules/bootstrap/fonts/glyphicons-halflings-regular.eot');
+    src: url('node_modules/bootstrap/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), 
+    url('node_modules/bootstrap/fonts/glyphicons-halflings-regular.woff') format('woff'), 
+    url('node_modules/bootstrap/fonts/glyphicons-halflings-regular.ttf') format('truetype'), 
+    url('node_modules/bootstrap/fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
+}
+
+.glyphicon{
+    font-family: 'Glyphicons Halflings' !important;
+}
