--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -2,7 +2,7 @@
     <div class="row checkout-header">
         <div class="col-xs-12">
             <div class="col-xs-6 header-details">
-                <h4><strong>{{ username }}</strong></h4>
+                <p class="username"><strong>{{ username }}</strong></p>
                 <p>YOUR TOTAL</p>
             </div>
             <div class="col-xs-6 header-total">
@@ -91,7 +91,7 @@
             <div class="order-data">
                 <p>Your order number is: {{ orderNumber }}</p>
                 <br>
-                <p>You will receive a confirmation email shortly!</p>
+                <p>You will receive a confirmation email shortly with details about your order!</p>
                 <!-- additional information may be placed here to inform the customer -->
             </div>
             <button type="button" class="btn btn-success" title="">OK</button>
