--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -67,8 +67,8 @@
                 <hr>
                 <div class="row  formFooter">
                     <div class="col-xs-12">
-                        <button class="formSub" type="submit" title="Pay and finalize your order">Pay</button>
-                        <!-- [disabled]="!checkoutForm.valid" -->
+                        <button class="formSub" type="submit" title="Pay and finalize your order"
+                            [disabled]="!checkoutForm.valid">Pay</button>
                         <br>
                         <br>
                         <p><a title="Cancel order and return to the cart">Cancel order</a></p>
